# amber-lsp

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  Tarpaulin.toml  codecov.yml  run_coverage.ab  rustfmt.toml
crates/analysis/: Cargo.toml
crates/analysis/benches/: analysis_benchmark.rs
crates/analysis/src/: files.rs  lib.rs  stdlib.rs  types.rs
crates/analysis/src/alpha034/: exp.rs  global.rs  stmnts.rs
crates/analysis/src/alpha035/: exp.rs  global.rs  stmnts.rs
crates/analysis/src/alpha040/: exp.rs  global.rs  stmnts.rs
crates/analysis/src/alpha050/: exp.rs  global.rs  mod.rs  pure_analysis.rs  salsa_db.rs  stmnts.rs  unused.rs
crates/analysis/src/alpha050/pure_analysis/: context.rs  exp.rs  global.rs  mod.rs  stmnts.rs  utils.rs
crates/analysis/src/alpha050/salsa/: analyze.rs  generics.rs  imports.rs  mod.rs  parse.rs  stdlib.rs  types.rs
crates/analysis/src/alpha060/: exp.rs  global.rs  mod.rs  stmnts.rs  unused.rs
crates/server/: Cargo.toml
crates/server/src/: backend.rs  code_lens.rs  completion.rs  diagnostics.rs  files.rs  goto_definition.rs  hover.rs  lib.rs  main.rs  salsa_shadow.rs  semantic_tokens.rs  stdlib.rs
crates/server/tests/analysis/: alpha034.rs  alpha050.rs  alpha060.rs  dual_validation.rs  mod.rs  server_integration.rs
crates/server/tests/analysis/snapshots/: r#mod__analysis__alpha034__function_definition-8.snap  r#mod__analysis__alpha034__generics_reference-4.snap  r#mod__analysis__alpha050__array_first_generic-2.snap  r#mod__analysis__alpha050__array_first_generic-3.snap  r#mod__analysis__alpha050__array_first_generic.snap  r#mod__analysis__alpha050__array_first_generic.snap.new  r#mod__analysis__alpha050__array_index_set-2.snap  (+108 more)
crates/server/tests/grammar/: alpha034.rs  alpha035.rs  alpha040.rs  alpha050.rs  alpha060.rs  mod.rs
crates/types/: Cargo.toml
crates/types/src/: data_type.rs  file_version.rs  fs.rs  lib.rs  token.rs  utils.rs  version.rs
(+846 files in other folders)
